packages/test_track/lib/src/errors/split_not_found_exception.dart
import 'package:test_track/src/errors/test_track_exception.dart';

class SplitNotFoundException implements TestTrackException {
  final String splitName;

  SplitNotFoundException({required this.splitName});

  @override
  String toString() => 'SplitNotFoundException: $splitName';
}
